--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "ali-oss": "^6.21.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.3",
-    "node": "^15.10.0"
+    "node": "^15.10.0",
+    "request-promise-native": "^1.0.9"
   }
 }
